add deploy scripts

--- a/part-3/notes-backend/package.json
+++ b/part-3/notes-backend/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf dist && cd ../../part-2/notes-frontend/ && npm run build && cp -r dist ../../part-3/notes-backend",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "fly logs"
   },
   "keywords": [],
   "author": "Jaimin Parmar",
