--- a/part-3/notes-backend/package.json
+++ b/part-3/notes-backend/package.json
@@ -16,10 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.7",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.3"
   }
 }
