--- a/notes-backend/package.json
+++ b/notes-backend/package.json
@@ -19,11 +19,13 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.4.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.7",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "supertest": "^7.0.0"
   }
 }
