add cypress cli tests command

--- a/notes-frontend/package.json
+++ b/notes-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "server": "json-server --port 3001 --watch db.json",
     "test": "vitest run",
+    "test:e2e": "cypress run",
     "cypress:open": "cypress open"
   },
   "dependencies": {
