--- a/query-notes/package.json
+++ b/query-notes/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
