--- a/webpack/package.json
+++ b/webpack/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "webpack": "^5.93.0",
