--- a/webpack/package.json
+++ b/webpack/package.json
@@ -4,7 +4,8 @@
   "description": "practising webpack",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack serve --mode=development"
+    "start": "webpack serve --mode=development",
+    "server": "json-server -p 3001 db.json"
   },
   "license": "MIT",
   "devDependencies": {
@@ -13,12 +14,14 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "json-server": "^1.0.0-beta.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "core-js": "^3.38.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
